new proj/src/objects/GE_ES_Risk_Factor_Deviation__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GE_ES_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_ES_Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDRM/VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDRM/VP P&amp;W Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>==</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>!=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;=</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_RiskFactor_PL_Configuration__c</fullName>
        <label>Risk Factor P&amp;L Configuration</label>
        <referenceTo>GE_ES_Risk_Factor_Configuration__c</referenceTo>
        <relationshipLabel>Risk Factor Deviations</relationshipLabel>
        <relationshipName>GE_ES_Risk_Factor_Deviations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_ES_Risk_Factor_Name__c</fullName>
        <formula>GE_ES_RiskFactor_PL_Configuration__r.GE_ES_Risk_Factor__r.GE_ES_Risk_Factor_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Factor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Type__c</fullName>
        <formula>text(GE_ES_RiskFactor_PL_Configuration__r.GE_ES_Risk_Factor__r.GE_ES_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_Risk_Score__c</fullName>
        <label>Risk Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Risk Factor Deviation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_ES_Level__c</columns>
        <columns>GE_ES_Operator__c</columns>
        <columns>GE_ES_Value__c</columns>
        <columns>GE_ES_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>023583</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Deviation Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Factor Deviations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>